<resources>
    <string name="app_name">Spunk</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="app_quote">“If they don’t like you for being yourself, be yourself even more.”</string>
    <string name="question_radio">Question</string>
    <string name="blog_radio">Blog</string>
    <string name="topic_label">Topic*:</string>
    <string name="desc_label">Description:</string>
    <string name="button_post">Post</string>
    <string name="button_discard">Discard</string>
    <string name="helpline_page"><b>Help Line</b></string>
    <string name="helpline_tag">Remember, you are not alone!</string>
    <string name="helpline_text">Crisis Call Center: </string>
    <string name="crisis_no">800-273-8255</string>
    <string name="crisis_tipline">Cyber Tipline: </string>
    <string name="tipline_no">800-843-5678</string>
    <string name="link">Click here for more details</string>
    <string name="title_activity_post_detail">PostDetailActivity</string>
</resources>
