<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.spunk.PostActivity">

    <TextView
        android:id="@+id/radio_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="Want to post a Question or a blog? "
        android:layout_marginTop="60sp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_text">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/questionRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_radio"
                android:fontFamily="@font/aclonica"/>
            <RadioButton
                android:id="@+id/blogRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/questionRadioButton"
                android:text="@string/blog_radio"
                android:fontFamily="@font/aclonica"
                android:layout_marginLeft="50sp"/>

        </RelativeLayout>
    </RadioGroup>

    <TextView
        android:id="@+id/topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogroup"
        android:fontFamily="@font/aclonica"
        android:text="@string/topic_label"
        android:layout_marginTop="60sp" />

    <EditText
        android:id="@+id/editTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topic" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTopic"
        android:fontFamily="@font/aclonica"
        android:text="@string/desc_label"
        android:layout_marginTop="60sp"/>

    <EditText
        android:id="@+id/editDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description" />

    <Button
        android:id="@+id/button_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDesc"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:layout_toEndOf="@+id/topic"
        android:layout_toRightOf="@+id/topic"
        android:text="@string/button_post" />

    <Button
        android:id="@+id/button_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_post"
        android:layout_toEndOf="@+id/radiogroup"
        android:layout_toRightOf="@+id/radiogroup"
        android:text="@string/button_discard" />


</RelativeLayout>
