<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/white"-->
    <!--tools:context="com.example.android.spunk.helplineActivity">-->

    <!--<TextView-->
        <!--android:id="@+id/textView2"-->
        <!--android:layout_width="384dp"-->
        <!--android:layout_height="98dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:background="@color/colorBG"-->
        <!--android:fontFamily="sans-serif-smallcaps"-->
        <!--android:text="@string/helpline_page"-->
        <!--android:textAlignment="center"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="45sp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="1.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--tools:layout_editor_absoluteY="0dp"-->
        <!--android:layout_marginLeft="8dp"-->
        <!--tools:ignore="MissingConstraints" />-->

    <!--<TextView-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_width="366dp"-->
        <!--android:layout_height="340dp"-->
        <!--android:text="@string/helpline_text"-->
        <!--android:textAlignment="inherit"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="25sp"-->
        <!--tools:ignore="MissingConstraints"-->
        <!--tools:layout_editor_absoluteX="9dp"-->
        <!--tools:layout_editor_absoluteY="150dp" />-->

    <!--<TextView-->
        <!--android:id="@+id/textView4"-->
        <!--android:layout_width="144dp"-->
        <!--android:layout_height="38dp"-->
        <!--android:text="@string/crisis_no"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body2"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="25sp"-->
        <!--android:onClick="callCrisis"-->
        <!--android:clickable="true"-->
        <!--tools:ignore="MissingConstraints"-->
        <!--tools:layout_editor_absoluteX="213dp"-->
        <!--tools:layout_editor_absoluteY="150dp" />-->

<!--</android.support.constraint.ConstraintLayout>-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.android.spunk.helplineActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="384dp"
        android:layout_height="118dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorBG"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/helpline_page"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="351dp"
        android:layout_height="331dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="118dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="76dp"
        android:text="@string/helpline_text"
        android:textAlignment="inherit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="150dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:clickable="true"
        android:onClick="callCrisis"
        android:text="@string/crisis_no"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="150dp" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="47dp"
        android:text="@string/crisis_tipline"
        android:textAlignment="inherit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="150dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:clickable="true"
        android:onClick="callCrisis"
        android:text="@string/tipline_no"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="150dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:clickable="true"
        android:onClick="openHelplineLink"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="47dp"
        android:text="@string/link"
        android:textAlignment="inherit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="150dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginBottom="32dp"
        android:text="TextView" />
</RelativeLayout>
